--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint . --ext .ts,.tsx",
     "prepare": "husky install"
   },
   "dependencies": {
